# LightningMediaPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  configure.bat  configure.sh  vcpkg.json
src/: console_main.cpp  dummy_main.cpp  gui_main.cpp  main.cpp
src/console/: CMakeLists.txt  cli_handler.cpp  cli_handler.hpp  main.cpp  main.h
src/core/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  core.cpp  core.hpp  eventmanager.cpp  eventmanager.hpp  events.hpp  lightning_core.hpp  lightning_eventmanager.hpp  lightning_events.hpp  lightning_player.hpp  lightning_playlist.hpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  utils.cpp  utils.hpp
src/dummy/: CMakeLists.txt  dummy_widget.cpp  dummy_widget.hpp  main.cpp  main.hpp
src/gui/: CMakeLists.txt  main.cpp  main.h  main.hpp
src/gui/widgets/: mainWindow.cpp  mainWindow.hpp  videoWidget.cpp  videoWidget.hpp
src/tutorial/: CMakeLists.txt  main.cpp
